k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grafana
  namespace: nfv-system

  labels:
    app: grafana
    tier: visualization

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
      - name: grafana

        image: grafana/grafana

        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service

metadata:
  name: grafana
  namespace: nfv-system

spec:
  selector:
    app: grafana

  ports:
    - port: 3000
      targetPort: 3000

  type: NodePort
