k8s/monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  namespace: nfv-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
      - name: monitor
        image: ishakumarii/monitor:v3
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: monitor
  namespace: nfv-system
spec:
  selector:
    app: monitor
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
