k8s/prometheus.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prometheus
  namespace: nfv-system

  labels:
    app: prometheus
    tier: monitoring

spec:
  replicas: 1

  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      containers:
      - name: prometheus

        image: prom/prometheus

        args:
          - "--config.file=/etc/prometheus/prometheus.yml"

        ports:
        - containerPort: 9090

        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus

      volumes:
      - name: prometheus-config-volume

        configMap:
          name: prometheus-config
---
apiVersion: v1
kind: Service

metadata:
  name: prometheus
  namespace: nfv-system

spec:
  selector:
    app: prometheus

  ports:
    - port: 9090
      targetPort: 9090

  type: ClusterIP
