k8s/switch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: switch
  namespace: nfv-system
  labels:
    app: switch
    tier: routing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: switch
  template:
    metadata:
      labels:
        app: switch
    spec:
      containers:
      - name: switch
        image: ishakumarii/switch:v3
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: switch
  namespace: nfv-system
  labels: 
    app: switch
spec:
  selector:
    app: switch
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
